kube/components/data-observability/grafana/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      nodePort: 30300
      targetPort: 3000
  selector:
    app: grafana
